# prometheus-remote-writer

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  RELEASING.md  pom.xml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  publish-docs.yml  release.yml
assembly/kar/: pom.xml
core/: Cargo.toml  build.rs
core/src/: config.rs  lib.rs  mapping.rs  output.rs  proto.rs  sanitize.rs
docs/: pom.xml
docs/src/docs/asciidoc/sections/: _configuration.adoc  _label-mapping.adoc  _overview.adoc
e2e/: README.md  compose.base.yml  compose.mimir.yml  compose.prometheus.yml  compose.victoriametrics.yml
e2e/gateway/: mimir.toml
e2e/opennms/: mimir.cfg  org.opennms.features.kafka.producer.cfg  org.opennms.features.kafka.producer.client.cfg  prometheus.cfg  victoriametrics.cfg
e2e/opennms/opennms.properties.d/: timeseries.properties
gateway/: Cargo.toml
gateway/examples/: seed.rs
gateway/src/: ingest.rs  lib.rs  main.rs  observability.rs  sender.rs
gateway/tests/: kafka_integration.rs
karaf-features/: pom.xml
plugin/: pom.xml
plugin/src/main/java/org/opennms/plugins/prometheus/remotewriter/config/: PrometheusRemoteWriterConfig.java
plugin/src/main/java/org/opennms/plugins/prometheus/remotewriter/http/: TlsConfig.java
plugin/src/main/java/org/opennms/plugins/prometheus/remotewriter/mapper/: IfSpeedNormalizer.java  LabelMapper.java  MetadataProcessor.java
plugin/src/main/java/org/opennms/plugins/prometheus/remotewriter/metrics/: PluginMetrics.java
plugin/src/main/java/org/opennms/plugins/prometheus/remotewriter/read/: PromQLBuilder.java  PromResponseParser.java  PrometheusReadClient.java
plugin/src/main/resources/: org.opennms.plugins.tss.prometheusremotewriter.cfg
plugin/src/main/resources/OSGI-INF/blueprint/: blueprint.xml
plugin/src/test/java/org/opennms/plugins/prometheus/remotewriter/: PrometheusRemoteWriteIT.java
plugin/src/test/java/org/opennms/plugins/prometheus/remotewriter/config/: PrometheusRemoteWriterConfigTest.java
proto/: collectionset.proto
(+5 files in other folders)
