[workspace]
resolver = "2"
members = ["core", "gateway"]

[workspace.package]
version = "0.5.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Ronny Trommer <ronny@opennms.com>"]
repository = "https://github.com/opennms-forge/prometheus-remote-writer"

[workspace.dependencies]
anyhow = "1"
bytes = "1"
prost = "0.13"
prost-types = "0.13"
serde = { version = "1", features = ["derive"] }
snap = "1"
thiserror = "2"
tracing = "0.1"
