[package]
name = "gateway-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core mapping and Prometheus Remote Write encoding for the OpenNMS remote-write gateway"

[dependencies]
anyhow.workspace = true
bytes.workspace = true
prost.workspace = true
prost-types.workspace = true
serde.workspace = true
snap.workspace = true
thiserror.workspace = true
tracing.workspace = true

[build-dependencies]
prost-build = "0.13"
